/*
 * Copyright 2020 Intel Corporation, Inc
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

service contextupdate {
    // Controllers
    rpc UpdateAppContext(ContextUpdateRequest) returns (ContextUpdateResponse) {
    }
}

message ContextUpdateRequest {
    string app_context = 1;
    string intent_name = 2;
}

message ContextUpdateResponse {
    bool app_context_updated = 1;
    string app_context_update_message = 2;
}
